@@ -1,7 +1,9 @@
 package com.zfw.jvm.gc;
 
 /**
- * -XX:PretenureSizeThreshold=4194304 -XX:+UseSerialGC
+ * -verbose:gc -Xmx40m -Xms40m -Xmn20m -XX:SurvivorRatio=8 -XX:+PrintGCDetails -XX:+PrintCommandLineFlags -XX:PretenureSizeThreshold=4194304
+ * 在ParallelGC下此参数不生效
+ * 在UseSerialGC和ConcMarkSweepGC下此参数才生效
  *
  * 新分配的对象如果大小超过PretenureSizeThreshold设置的值，则直接分配在老年代
  *
@@ -13,12 +15,12 @@ public class PretenureSizeThreshold {
     public static void main(String[] args) {
         int size = 1024 * 1024;
 
-        byte[] myAlloc = new byte[5 * size];
+        byte[] myAlloc = new byte[6 * size];
 
-        try {
-            Thread.sleep(1000000);
-        } catch (InterruptedException e) {
-            e.printStackTrace();
-        }
+//        try {
+//            Thread.sleep(1000000);
+//        } catch (InterruptedException e) {
+//            e.printStackTrace();
+//        }
     }
 }
